--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
       - "3000:80"
     volumes:
       - "./frontend:/usr/share/nginx/html"
+
+  backend:
+    container_name: backend
+    build: ./backend
