--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,27 @@ services:
   frontend:
     container_name: frontend
     build: ./frontend
-    ports:
-      - "3000:80"
+    #ports:
+    #  - "3000:80"
     volumes:
       - "./frontend:/usr/share/nginx/html"
+    labels:  
+      - "traefik.http.routers.frontend.rule=Host(frontend.docker.localhost)"
 
   backend:
     container_name: backend
     build: ./backend
-    ports:
-      - "3001:80"
+    #ports:
+    #  - "3001:80"
     volumes:
       - './backend:/var/www/html:cached'
-    
+    labels:  
+      - "traefik.http.routers.backend.rule=Host(backend.docker.localhost)"
+
+  reverse-proxy:
+    image: traefik:v2.2
+    command: --api.insecure=true --providers.docker
+    ports:
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
